<resources>
    <string name="app_name">Cash Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_started">GetStarted</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="no_account">Still have no account?</string>
    <string name="todo">TODO</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="birth_date">Birth Date</string>
    <string name="register_now">Register now!</string>
    <string name="i_agree_to_the_regulations">I agree to the regulations</string>
    <string name="nazwaUzytkownika">nazwaUzytkownika</string>
    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="months">
        <item>Styczeń</item>
        <item>Luty</item>
        <item>Marzec</item>
        <item>Kwiecień</item>
        <item>Maj</item>
        <item>Czerwiec</item>
        <item>Lipiec</item>
        <item>Sierpień</item>
        <item>Wrzesien</item>
        <item>Październik</item>
        <item>Listopad</item>
        <item>Grudzień</item>
    </string-array>
    <string-array name="years">
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1998</item>
        <item>1999</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>
    <string name="title_activity_home2">home2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="nazwa">Nazwa:</string>
    <string name="wprowad_nazw">Wprowadź nazwę</string>
    <string-array name="katygorie">
        <item>Nauka</item>
        <item>Zakupy</item>
        <item>Opłata za mieszkanie</item>
        <item>Kwiecień</item>
        <item>Maj</item>
        <item>Czerwiec</item>
        <item>Lipiec</item>
        <item>Sierpień</item>
        <item>Wrzesien</item>
        <item>Październik</item>
        <item>Listopad</item>
        <item>Grudzień</item>
    </string-array>
</resources>


